package org.example.pocztabackend.model.enums;

public enum ComplaintStatus {
    SUBMITTED,
    IN_REVIEW,
    ACCEPTED,
    REJECTED,
    CLOSED
}